--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,14 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+.detail-services-container {
+  display: flex;
+  flex-direction: column !important; /* Default to column on small screens */
+}
+
+@media (min-width: 768px) {
+  .detail-services-container {
+    flex-direction: row !important; /* Change to row on medium and larger screens */
+  }
+}
