--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,12 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+.roboto-regular {
+  font-family: "Roboto", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
+
 .detail-services-container {
   display: flex;
   flex-direction: column !important; /* Default to column on small screens */
